@@ -1,7 +1,24 @@
+/*
+ *   Copyright 2010 MINT Working Group
+ *
+ *   Licensed under the Apache License, Version 2.0 (the "License");
+ *   you may not use this file except in compliance with the License.
+ *   You may obtain a copy of the License at
+ *
+ *       http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *   Unless required by applicable law or agreed to in writing, software
+ *   distributed under the License is distributed on an "AS IS" BASIS,
+ *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *   See the License for the specific language governing permissions and
+ *   limitations under the License.
+ */
+
 package org.nema.medical.mint.dcmimport;
 
 import java.io.File;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 public class DCMImportMain {
@@ -76,7 +93,7 @@ public class DCMImportMain {
         try
         {
             //Create an instance of the Directory Processing Class
-            final MINTSend mintSender = new MINTSender(new URL(serverURL));
+            final MINTSend mintSender = new MINTSender(new URI(serverURL));
             final ProcessImportDir importProcessor = new ProcessImportDir(inputDir, mintSender);
 
             //Run the importing process against the specified directory
